--- a/analysis/exploratory_analysis_mujtaba.ipynb
+++ b/analysis/exploratory_analysis_mujtaba.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function also returned league averages for the given season based on zones"
+    "#### Check for missing values in XY coordinates "
    ]
   },
   {
@@ -101,6 +101,31 @@
    ],
    "source": [
     "player_shotchart_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "player_shotchart_df['LOC_X'].isnull().any() or player_shotchart_df['LOC_Y'].isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Function also returned league averages for the given season based on zones"
    ]
   },
   {
@@ -126,32 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check for missing values in XY coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "False"
-     },
-     "metadata": {},
-     "execution_count": 30
-    }
-   ],
-   "source": [
-    "player_shotchart_df['LOC_X'].isnull().any() or player_shotchart_df['LOC_Y'].isnull().any()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Shot Chart Creation"
+    "## Shot Chart Creation"
    ]
   },
   {
